Fixed layout issue on login page

--- a/styles/dashboard.css
+++ b/styles/dashboard.css
@@ -12,14 +12,14 @@
   background-color: rgba(255, 255, 255, 0.1);
 }
 
-main.grid {
+.dashboard.grid {
   grid-template-columns: 250px 1fr;
   background-color: #ecf1f8;
 }
 .sidebar {
   background-color: #fff;
 }
-main.dark {
+.dashboard.dark {
   background-color: rgb(12, 12, 12);
 }
 
